# motorControlSoftware

./: .gitignore  .travis.yml  CMakeLists.txt  Makefile  Positions_laserbox.txt  Positions_xraybox.txt  README.md  cmk.sh  commonDefs.h  config_laserBox.txt  config_vacuumBox.txt  config_xrayBox.txt  doxy.config  warmupTimestamps_xraybox.txt
.github/ISSUE_TEMPLATE/: bug_report.md  change_request.md  feature_request.md
Client/: CMakeLists.txt
Client/include/: Client.h
Client/src/: Client.cpp  main.cpp
Gui/: CMakeLists.txt  MotorControlGui.pro  warmupTimestamps.txt
Gui/forms/: form_fluorescence.ui  form_fluorwidget.ui  form_fwheelwidget.ui  form_gui.ui  form_gui_copy.ui  form_laserboxgui.ui  form_motorcontrolgui.ui  form_motorwidget.ui  form_optionswidget.ui  form_pgaugewidget.ui  form_referencepointswidget.ui  form_slitwidget.ui  form_tube.ui  form_tubewidget.ui  form_vacuumboxgui.ui
Gui/include/: FluorWidget.h  FwheelWidget.h  Gui.h  GuiDefs.h  MotorControlGui.h  MotorWidget.h  OptionsWidget.h  PGaugeWidget.h  ReferencePointsWidget.h  SlitWidget.h  TubeWidget.h  icons.qrc
Gui/src/: FluorWidget.cpp  FwheelWidget.cpp  Gui.cpp  MotorControlGui.cpp  MotorWidget.cpp  OptionsWidget.cpp  PGaugeWidget.cpp  ReferencePointsWidget.cpp  SlitWidget.cpp  TubeWidget.cpp  gui_main.cpp
MotorControlClient/: MotorControlClient.cpp  MotorControlClient.h  main.cpp
MotorControlClient/.svn/: entries
MotorControlClient/.svn/text-base/: XRayBoxClient.cpp.svn-base  XRayBoxClient.h.svn-base  main.cpp.svn-base
MotorControlGui/: FwheelWidget.cpp  Makefile  Makefile.gui  MotorControlGui.cpp  MotorControlGui.h  MotorControlGui.pro  MotorWidget.cpp  MotorWidget.h  OptionsWidget.cpp  PGaugeWidget.cpp  PGaugeWidget.h  gui_main.cpp  icons.qrc  qrc_icons.cpp
MotorControlGui/.svn/: entries
MotorControlGui/.svn/text-base/: Makefile.svn-base  MotorWidget.cpp.svn-base  MotorWidget.h.svn-base  OptionsWidget.cpp.svn-base  OptionsWidget.h.svn-base  XRayBoxGui.cpp.svn-base  XRayBoxGui.h.svn-base  XRayBoxGui.pro.svn-base  gui_main.cpp.svn-base
MotorControlGui/forms/: form_motorcontrolgui.ui  form_optionsgui.ui  form_pgaugewidget.ui  form_vacuumboxgui.ui
MotorControlGui/forms/.svn/: entries
MotorControlGui/forms/.svn/text-base/: form_motorwidget.ui.svn-base
MotorControlGui/forms/include/: ui_form_fwheelwidget.h  ui_form_laserboxgui.h  ui_form_motorcontrolgui.h  ui_form_motorwidget.h  ui_form_optionsgui.h  ui_form_xrayboxgui.h
MotorControlGui/forms/include/.svn/: entries
MotorControlGui/images/.svn/: entries
MotorControlGui/images/.svn/text-base/: plusImage.png.svn-base
MotorControlGui/mocs/: moc_FwheelWidget.cpp  moc_MotorControlGui.cpp  moc_MotorWidget.cpp  moc_OptionsWidget.cpp
MotorControlGui/mocs/.svn/: entries
MotorControlGui/objs/.svn/: entries
MotorControlServer/: INITIALIZE.cpp  INITIALIZE.h  INTERFACE.cpp  INTERFACE.h  MOTOR.cpp  MotorControlServer.cpp  PGAUGE.cpp  PGAUGE.h  PRESSURE.cpp  PRESSURE.h  SLIT.cpp  XRAY.cpp  XRAY.h
MotorControlServer/.svn/: entries
MotorControlServer/.svn/text-base/: INITIALIZE.cpp.svn-base  INITIALIZE.h.svn-base  INTERFACE.cpp.svn-base  INTERFACE.h.svn-base  MOTOR.cpp.svn-base  MOTOR.h.svn-base  SLIT.cpp.svn-base  SLIT.h.svn-base  XRAY.cpp.svn-base  XRAY.h.svn-base  XRayBoxServer.cpp.svn-base
MySocketTCP/: MySocketTCP.c  MySocketTCP.cpp
MySocketTCP/.svn/: entries
MySocketTCP/.svn/text-base/: MySocketTCP.cpp.svn-base
Server/: CMakeLists.txt
Server/include/: Controller.h  FWHEEL.h  Fluorescence.h  Fwheel.h  INITIALIZE.h  INTERFACE.h  Initialize.h  Interface.h  MOTOR.h  Motor.h  Pgauge.h  ReferencePoint.h  ReferencePoints.h  SLIT.h  Slit.h  TargetHolder.h  Xray.h  logger.h
Server/src/: Controller.cpp  FWHEEL.cpp  Fluorescence.cpp  Fwheel.cpp  INITIALIZE.cpp  INTERFACE.cpp  Initialize.cpp  Interface.cpp  MOTOR.cpp  Motor.cpp  Pgauge.cpp  ReferencePoint.cpp  ReferencePoints.cpp  SLIT.cpp  Server.cpp  Slit.cpp  TargetHolder.cpp  XRAY.cpp  Xray.cpp
cmake/: CompilerWarnings.cmake
conda-recepie/: build.sh  copy_client.sh  copy_gui.sh  meta.yaml
config/: Positions_vacuumbox.txt  configTemp.txt  config_laserBox.txt  config_vacuumBox.txt  config_virtual.txt  config_xrayBox.txt
docs/: doxy.config
docs/.svn/: entries
docs/html/: INTERFACE_8cpp.html  INTERFACE_8h-source.html  INTERFACE_8h.html  MOTOR_8cpp.html  MOTOR_8h-source.html  MOTOR_8h.html  MotorWidget_8cpp.html  MotorWidget_8h.html  MySocketTCP_8h-source.html  OptionsWidget_8cpp.html  SLIT_8cpp.html  XRAY_8cpp.html  XRAY_8h.html  XRayBoxClient_8h-source.html  XRayBoxGui_8h-source.html  XRayBoxGui_8h.html  classINITIALIZE-members.html  classINTERFACE.html  classMotorWidget-members.html  classMySocketTCP-members.html  classOptionsWidget.html  classSLIT.html  classXRayBoxClient.html  classXRayBoxGui.html  commonDefs_8h-source.html  files.html  functions.html  functions_0x63.html  functions_0x68.html  functions_0x6f.html  functions_0x70.html  functions_0x72.html  functions_0x74.html  functions_0x76.html  functions_0x78.html  functions_0x79.html  functions_0x7e.html  globals_defs.html  globals_eval.html  globals_type.html  (+2 more)
docs/html/.svn/: entries
docs/html/.svn/text-base/: INITIALIZE_8cpp.html.svn-base  INITIALIZE_8h-source.html.svn-base  INITIALIZE_8h.html.svn-base  MySocketTCP_8cpp.html.svn-base  (+45 more)
docs/latex/: INITIALIZE_8h.tex  INTERFACE_8cpp.tex  MOTOR_8cpp.tex  MOTOR_8h.tex  MotorWidget_8h.tex  MySocketTCP_8cpp.tex  MySocketTCP_8h.tex  SLIT_8cpp.tex  SLIT_8h.tex  XRAY_8h.tex  XRayBoxClient_8cpp.tex  XRayBoxGui_8cpp.tex  XRayBoxServer_8cpp.tex  annotated.tex  classINITIALIZE.tex  classINTERFACE.tex  classMOTOR.tex  classMotorWidget.tex  classMySocketTCP.tex  classOptionsWidget.tex  classXRAY.tex  commonDefs_8h.tex  files.tex
docs/latex/.svn/: entries
include/: MySocketTCP.cpp  MySocketTCP.h  ansi.h  commonDefs.h  logger.h
include/sls/: ClientSocket.cpp  ClientSocket.h  DataSocket.cpp  DataSocket.h  ServerSocket.cpp  ServerSocket.h  network_utils.cpp  string_utils.cpp
python/: setup.py
python/slsdetbox/: XrayBox.py  __init__.py
python/tests/: test_BigXrayBox.py
(+16 files in other folders)
